[package]
name = "httprd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "httprd"
path = "src/main.rs"

[dependencies]
axum            = "0.7"
chrono          = { version = "0.4", features = ["clock"] }
clap            = { version = "4",   features = ["derive"] }
humansize       = "2"
mime_guess      = "2"
percent-encoding = "2"
tokio           = { version = "1",   features = ["full"] }
tokio-util      = { version = "0.7", features = ["io"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level      = 3
lto            = true
codegen-units  = 1
strip          = true
